  atanh, erf, erfc, lgamma, and tgamma.

* Optimized implementations for fma, fmaf, remainder, remaindef, frexpf,
  frexp, frexpl (binary128), and frexpl (intel96) have been added.

* The SVID handling for acosf, acoshf, asinhf, atan2f, atanhf, coshf,
  lgammaf/lgammaf_r, log10f, sinhf, sqrtf, tgammaf, y0/j0, y1/j1, and yn/jn
  were moved to compat symbols, allowing improvements in performance.

Deprecated and removed features, and other changes affecting compatibility:

* Support for dumped heaps has been removed - malloc_set_state() now always
  returns the error code -1.

* The uimaxabs function has been renamed to umaxabs, following a change
  to the name of that function in ISO C2Y.  The old function continues
  to exist as a compatibility symbol for old binaries.

* The fromfp, fromfpx, ufromfp and ufromfpx functions, and the
  corresponding functions for other floating-point types, now return
  their result in the same type as their floating-point argument, rather
  than intmax_t or uintmax_t, in accordance with a change to the
  definition of these functions in ISO C23.  Existing binaries that use
  the versions returning intmax_t or uintmax_t will continue to work.

* The support for TX lock elision of pthread mutexes has been removed on all
  architectures (powerpc, s390x, x86_64).

Changes to build and runtime requirements:

  [Add changes to build and runtime requirements here]

Security related changes:

The following CVEs were fixed in this release, details of which can be
found in the advisories directory of the release tarball:

  [The release manager will add the list generated by
  scripts/process-advisories.sh just before the release.]

The following bugs were resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]

Version 2.42

Major new features:

* The following ISO C23 function families (introduced in TS