@@ -23,10 +23,5 @@
 int
 timespec_getres (struct timespec *ts, int base)
 {
-  if (base == TIME_UTC)
-    {
-      __clock_getres (CLOCK_REALTIME, ts);
-      return base;
-    }
-  return 0;
+  return __clock_getres (clock_from_timebase (base), ts) == 0 ? base : 0;
 }
